задал разметку блоку sirvices

--- a/index.html
+++ b/index.html
@@ -40,5 +40,65 @@
         </div>
     </div>
 </header>
+<main class="main">
+    <section class="services">
+        <div class="container">
+            <div class="services__group">
+            <div class="services__wrapper">
+                <h2 class="services__subtitle subtitle">Адаптивный веб-дизайн</h2>
+                <h3 class="services__sub">Наши сайты работают отлично на всех  доступных устройствах.</h3>
+                <p class="services__text">Бывало ли у Вас такое, что заказать товар в интернет-магазине
+                    со своего смартфона ужасно некомфортно?</p>
+                <p class="services__text">Мы решаем эти задачи, и делаем Ваш сайт
+                    удобным для всех посетителей. А это влияет и на
+                    покупаемость продаваемой продукции!</p>
+                <button class="services__button button">СВЯЗАТЬСЯ С НАМИ</button>
+            </div>
+            <img src="/src/img/designer.png" alt="" class="services__img">
+            <div class="services__block-line">
+                <span class="services__span"></span>
+                <span class="services__span"></span>
+                <span class="services__span"></span>
+            </div>
+        </div>
+            <div class="services__group">
+                <div class="services__wrapper">
+                    <h2 class="services__subtitle subtitle">Адаптивный веб-дизайн</h2>
+                    <h3 class="services__sub">Наши сайты работают отлично на всех  доступных устройствах.</h3>
+                    <p class="services__text">Бывало ли у Вас такое, что заказать товар в интернет-магазине
+                        со своего смартфона ужасно некомфортно?</p>
+                    <p class="services__text">Мы решаем эти задачи, и делаем Ваш сайт
+                        удобным для всех посетителей. А это влияет и на
+                        покупаемость продаваемой продукции!</p>
+                    <button class="services__button button">СВЯЗАТЬСЯ С НАМИ</button>
+                </div>
+                <img src="/src/img/designer.png" alt="" class="services__img">
+                <div class="services__block-line">
+                    <span class="services__span"></span>
+                    <span class="services__span"></span>
+                    <span class="services__span"></span>
+                </div>
+            </div>
+            <div class="services__group">
+                <div class="services__wrapper">
+                    <h2 class="services__subtitle subtitle">Адаптивный веб-дизайн</h2>
+                    <h3 class="services__sub">Наши сайты работают отлично на всех  доступных устройствах.</h3>
+                    <p class="services__text">Бывало ли у Вас такое, что заказать товар в интернет-магазине
+                        со своего смартфона ужасно некомфортно?</p>
+                    <p class="services__text">Мы решаем эти задачи, и делаем Ваш сайт
+                        удобным для всех посетителей. А это влияет и на
+                        покупаемость продаваемой продукции!</p>
+                    <button class="services__button button">СВЯЗАТЬСЯ С НАМИ</button>
+                </div>
+                <img src="/src/img/designer.png" alt="" class="services__img">
+                <div class="services__block-line">
+                    <span class="services__span"></span>
+                    <span class="services__span"></span>
+                    <span class="services__span"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
 </html>
